syntax = "proto3";

import "entity/request.proto";
import "entity/response.proto";
import "entity/stream_message.proto";

package grpc;
option go_package = ".;grpc";

message TaskServiceSendNotificationRequest {
  string node_key = 1;
  string task_id = 2;
}

service TaskService {
  rpc Subscribe(stream StreamMessage) returns (Response){};
  rpc Fetch(Request) returns (Response){};
  rpc SendNotification(TaskServiceSendNotificationRequest) returns (Response){};
}
